setup for printing

--- a/rsc/narclog.css
+++ b/rsc/narclog.css
@@ -1,8 +1,8 @@
 /* 
-    Document   : manifest
+    Document   : narclog
     Created on : Apr 16, 2013, 11:07:32 AM
     Author     : rxaaron
-    Description: Clean interface for quick access
+    Description: Keeping it simple.
 */
 
 body
