--- a/rsc/narclog.css
+++ b/rsc/narclog.css
@@ -46,31 +46,41 @@ body
 {position:absolute; display:inline; top:55px; left:0px; right:-2px; bottom:0px; overflow:auto; padding:20px;}
 
 #content table
-{border:0px;}
-
-#content table.list
-{border-collapse:collapse; border:1px solid #585858; padding:3px 7px 2px 7px;}
-
-#content col.datesent
-{width:100px;}
-
-#content col.location
-{width:200px;}
-
-#content col.numpages
-{width:75px;}
-
-#content col.comments
-{width:400px;}
-
-#content col.status
-{width:150px;}
+{border-collapse:collapse; table-layout:fixed;}
 
 #content th
-{text-align:left; background-color:#585858; color:#ffffff;}
+{text-align:center; background-color:#585858; color:#ffffff; border:1px solid #585858;}
 
 #content td
 {padding:3px;}
+
+#content tr.odd
+{background-color:#f2f2f2;}
+
+#content tr.even
+{background-color:#ffffff;}
+
+#content col.listamount
+{width:75px;}
+
+#content col.listndc
+{width:125px;}
+
+#content col.listform
+{width:75px;}
+
+#content col.liststrength
+{width:75px;}
+
+#content col.listdrug
+{width:400px;}
+
+#content td.taright
+{text-align:right;}
+
+#content td.tacenter
+{text-align:center;}
+
 #content input.entry
 {padding:10px 125px 10px 125px;}
 
