action script, pt 2, drug properties

--- a/rsc/narclog.css
+++ b/rsc/narclog.css
@@ -75,6 +75,15 @@ body
 #content col.listdrug
 {width:400px;}
 
+#content col.drugname
+{width:350px;}
+
+#content  col.drugstrength
+{width:75px;}
+
+#content col.drugform
+{width:100px;}
+
 #content td.taright
 {text-align:right;}
 
@@ -103,7 +112,7 @@ body
 {position:absolute; display:block; padding:5px; left:0px; top:50px; right:0px; bottom:0px; overflow:auto;}
 
 #entry
-{position:absolute; display:block; margin:5px; border-top:1px solid #b40404; border-left:1px solid #b40404; border-right:2px solid #b40404; border-bottom:3px solid #b40404; top:85px; left:5px; right:5px; bottom:5px; border-radius:10px; padding:10px;}
+{position:absolute; display:block; margin:5px; top:85px; left:5px; right:5px; padding:10px; overflow:auto;}
 
 #entry p.tacenter
 {text-align:center;}
