--- a/rsc/narclog.css
+++ b/rsc/narclog.css
@@ -111,8 +111,14 @@ tr.odd
 #results
 {position:absolute; display:block; padding:5px; left:0px; top:50px; right:0px; bottom:0px; overflow:auto;}
 
+#listdiv
+{position:absolute; display:block; left:5px; top:5px; right:5px; height:300px; border-top:1px solid #0404b4; border-left:1px solid #0404b4; border-right:2px solid #0404b4; border-bottom:3px solid #0404b4; border-radius:10px; padding:10px;}
+
 #entry
 {position:absolute; display:block; margin:5px; top:85px; left:5px; right:5px; padding:10px; overflow:auto;}
+
+#userdiv
+{position:absolute; display:block; left:5px; top:335px; right:5px; bottom:5px; margin:5px; padding:10px; overflow:auto;}
 
 #entry p.tacenter
 {text-align:center;}
@@ -137,3 +143,6 @@ tr.odd
 
 .hideme
 {display:none;}
+
+a
+{color:#b40404;}
