--- a/rsc/narclog.css
+++ b/rsc/narclog.css
@@ -36,7 +36,7 @@ body
 
 /**Main Area**/
 #main
-{position:absolute; top:0px; left:265px; right:125px; bottom:0px;}
+{position:absolute; top:0px; left:265px; right:5px; bottom:0px;}
 
 #main div.storechange
 {position:absolute; top:50px; left:50px;}
@@ -95,10 +95,10 @@ tr.odd
 
 /**Side Bar**/
 #sidebar
-{position:fixed; top:0px; right:0px; height:100%; width:120px; overflow:auto; background:#e0e0e0; border-left:2px solid #c0c0c0;}
+{position:fixed; top:0px; right:0px; height:100%; width:60px; overflow:auto; background:#e0e0e0; border-left:2px ridge #c0c0c0;}
 
 #sidebar p
-{display:block; margin:10px;}
+{display:block; margin:5px;}
 
 #sidebar a
 {color:#b40404;}
