--- a/rsc/narclog.css
+++ b/rsc/narclog.css
@@ -60,13 +60,13 @@ body
 #content
 {position:absolute; display:inline; top:55px; left:0px; right:-2px; bottom:0px; overflow:auto; padding:20px;}
 
-#content table
+table
 {border-collapse:collapse; table-layout:fixed;}
 
-#content th
+th
 {text-align:center; background-color:#585858; color:#ffffff; border:1px solid #585858;}
 
-#content td
+td
 {padding:3px;}
 
 tr.even
@@ -99,10 +99,10 @@ tr.odd
 #content col.drugform
 {width:100px;}
 
-#content .taright
+.taright
 {text-align:right;}
 
-#content .tacenter
+.tacenter
 {text-align:center;}
 
 #content input.entry
@@ -161,3 +161,6 @@ tr.odd
 
 a
 {color:#b40404;}
+
+#report
+{padding:20px;}
