--- a/rsc/narclog.css
+++ b/rsc/narclog.css
@@ -41,7 +41,14 @@ body
 {margin:10px;}
 
 #menu a
-{display:block; text-align:right; margin-left:50px; margin-top:10px; padding:5px 18px 5px 20px; color:#606060; background:#eeeeee; font-size:1.5em; font-weight:normal; text-decoration:none; border-top-left-radius:12px; border-bottom-left-radius:12px;}
+{display:block; text-align:right; margin-left:50px; margin-top:10px; padding:5px 18px 5px 20px; color:#606060; background:#eeeeee; font-size:1.5em; font-weight:normal; text-decoration:none; border-top-left-radius:12px; border-bottom-left-radius:12px; animation:lightSpeedin 1.5s ease-out forwards;}
+
+@keyframes lightSpeedin{
+   	0% { transform: translateX(100%) skewX(-30deg); opacity: 0; }
+	60% { transform: translateX(-20%) skewX(30deg); opacity: 1; }
+	80% { transform: translateX(0%) skewX(-15deg); opacity: 1; }
+	100% { transform: translateX(0%) skewX(0deg); opacity: 1; } 
+}
 
 #menu a:hover 
 {color:#303030; background:#ffffff; animation:pulse .5s linear alternate infinite;}
